--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@typescript-eslint/eslint-plugin": "^5.38.0",
         "@typescript-eslint/parser": "^5.38.0",
         "eslint": "^8.23.1",
+        "prettier": "^2.7.1",
         "ts-node": "^10.9.1",
         "typescript": "^4.8.3"
     }
