--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "lint": "eslint src/*.ts",
         "lintfix": "eslint src/*.ts --fix",
         "test": "jasmine",
-        "server": "nodemon build/index.js"
+        "start": "nodemon build/index.js"
     },
     "repository": {
         "type": "git",
