--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
     "main": "index.js",
     "scripts": {
         "build": "npx tsc",
-        "lint": "eslint src/*.ts",
-        "lintfix": "eslint src/*.ts --fix",
-        "test": "npm run build && jasmine",
-        "start": "nodemon build/index.js"
+        "lint": "eslint src/**/*.ts",
+        "lintfix": "eslint src/**/*.ts --fix",
+        "test": "npx tsc && jasmine",
+        "start": "npx tsc && nodemon build/index.js"
     },
     "repository": {
         "type": "git",
@@ -24,6 +24,7 @@
         "@types/express": "^4.17.14",
         "@types/jasmine": "^4.3.0",
         "@types/node": "^18.7.18",
+        "@types/node-localstorage": "^1.3.0",
         "@types/sharp": "^0.31.0",
         "@types/supertest": "^2.0.12",
         "@typescript-eslint/eslint-plugin": "^5.38.0",
@@ -37,10 +38,13 @@
         "prettier": "^2.7.1",
         "supertest": "^6.2.4",
         "ts-node": "^10.9.1",
+        "types": "file:../../../../node-localstorage",
         "typescript": "^4.8.3"
     },
     "dependencies": {
         "express": "^4.18.1",
-        "sharp": "^0.31.0"
+        "node-localstorage": "^2.2.1",
+        "sharp": "^0.31.0",
+        "type": "file:../../../../node-localstorage"
     }
 }
