--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
         "@types/express": "^4.17.14",
         "@types/jasmine": "^4.3.0",
         "@types/node": "^18.7.18",
-        "@types/node-localstorage": "^1.3.0",
         "@types/sharp": "^0.31.0",
         "@types/supertest": "^2.0.12",
         "@typescript-eslint/eslint-plugin": "^5.38.0",
@@ -38,13 +37,10 @@
         "prettier": "^2.7.1",
         "supertest": "^6.2.4",
         "ts-node": "^10.9.1",
-        "types": "file:../../../../node-localstorage",
         "typescript": "^4.8.3"
     },
     "dependencies": {
         "express": "^4.18.1",
-        "node-localstorage": "^2.2.1",
-        "sharp": "^0.31.0",
-        "type": "file:../../../../node-localstorage"
+        "sharp": "^0.31.0"
     }
 }
