--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     },
     "homepage": "https://github.com/Tamulus47/image-processing-API-project#readme",
     "devDependencies": {
+        "@types/cors": "^2.8.12",
         "@types/express": "^4.17.14",
         "@types/jasmine": "^4.3.0",
         "@types/node": "^18.7.18",
@@ -32,6 +33,7 @@
         "@types/supertest": "^2.0.12",
         "@typescript-eslint/eslint-plugin": "^5.38.0",
         "@typescript-eslint/parser": "^5.38.0",
+        "cors": "^2.8.5",
         "db-migrate": "^0.11.13",
         "db-migrate-pg": "^1.2.2",
         "eslint": "^8.23.1",
